2001-11-23 Stefan Petersen (spe@stacken.kth.se)

	* src/gerb_image.h, src/draw.c, src/gerber.c, src/scm_gerber.c:
	  Are now able to parse and display polyogon area fill codes.

	
2001-11-21 Andreas Andersson (e92_aan@e.kth.se)

	* src/drill.c:
	  The format guessing code now guesses right for
	  one more format.
	  More M codes recognized (and later ignored).

	
2001-11-20 Stefan Petersen (spe@stacken.kth.se)

	* src/scm_gerber.c: Backend didn't receive the last
	  entry in the netlist due to bad loop constraint.
	* src/gerber.c: Made sure angles always are positive when
	  calculating multi quadrant ones.
	* src/gerber.c: Improved error detection by checking that
	  all part of an image is there.
	* src/gerber.c: Fix for EagleCad caused other Gerber files
	  to fail. Only D-code 1-3 on a line should also be considered
	  as a change.
	
	
2001-11-15 Stefan Petersen (spe@stacken.kth.se)

	* src/gerbv.c: Tooltips over radio buttons with name
	  of loaded file.

	
-- Release 0.0.5 --	

	
2001-11-14 Stefan Petersen (spe@stacken.kth.se)

	* src/gerbv.c: Changed speed key for zooming in to
	  Alt-O.
	* configure.in: Changed version number for release.
	
	
2001-11-09 Stefan Petersen (spe@stacken.kth.se)

	* src/gerb_image.[hc]: Added.
	* src/drill.[hc], src/gerber.[hc], src/scm_gerber.[hc]:
	  Changed to utilize the new "class", gerb_image.

	
2001-11-07 Stefan Petersen (spe@stacken.kth.se)

	* src/draw.c, src/gerber.c: Implemented multi quadrant arcs.
	  Calculated with a separate function; should be able to be
	  combined with single quadrant calculations. Not properly 
	  tested since I need better examples.
	
	
2001-11-06 Andreas Andersson (e92_aan@e.kth.se)

	* src/drill.h, src/drill.c:
	  parse_drillfile() now ignores unstandard text in headers.
	  Also, it now returns the actual unit used (it used to return
	  the unit of the input file).
	  Minor fixes, mostly moved stuff around.

2001-11-03 Stefan Petersen (spe@stacken.kth.se)
